添加Potplayer的域名

--- a/Rules-Complete/Provider/Proxy.yaml
+++ b/Rules-Complete/Provider/Proxy.yaml
@@ -1679,6 +1679,8 @@ payload:
   - DOMAIN-SUFFIX,falungong.org.uk
   - DOMAIN-SUFFIX,falunhr.org
   - DOMAIN-SUFFIX,faluninfo.de
+  - DOMAIN-SUFFIX,potplayer.daum.net
+  - DOMAIN-SUFFIX,daumcdn.net
   - DOMAIN-SUFFIX,faluninfo.net
   - DOMAIN-SUFFIX,falunpilipinas.net
   - DOMAIN-SUFFIX,falunworld.net
