将Proxy中的golang.org移入Developer

--- a/Rules-Complete/Provider/Developer.yaml
+++ b/Rules-Complete/Provider/Developer.yaml
@@ -14,6 +14,7 @@ payload:
   - DOMAIN-SUFFIX,githubusercontent.com
   - DOMAIN-SUFFIX,gitlab.com
   - DOMAIN-SUFFIX,gitlab.io
+  - DOMAIN-SUFFIX,golang.org
   - DOMAIN-SUFFIX,jitpack.io
   - DOMAIN-SUFFIX,maven.apache.org
   - DOMAIN-SUFFIX,maven.org
