--- a/Rules-Complete/Rule Source.yaml
+++ b/Rules-Complete/Rule Source.yaml
@@ -219,7 +219,7 @@ rule-providers:
   Developer:
     behavior: classical
     interval: 86400
-    path: ./Rules/Media/GlobalTV/Developer
+    path: ./Rules/Developer
     type: http
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Developer.yaml'
   Discovery Plus:
