--- a/Rules-Complete/Provider/Developer.yaml
+++ b/Rules-Complete/Provider/Developer.yaml
@@ -21,6 +21,7 @@ payload:
   - DOMAIN-SUFFIX,maven.org
   - DOMAIN-SUFFIX,medium.com
   - DOMAIN-SUFFIX,mvnrepository.com
+  - DOMAIN-SUFFIX,npmjs.org
   - DOMAIN-SUFFIX,oracle.com
   - DOMAIN-SUFFIX,python.org
   - DOMAIN-SUFFIX,quay.io
