--- a/Rules-Complete/Provider/Media/GlobalTV/Twitch.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Twitch.yaml
@@ -1,6 +1,7 @@
 payload:
   # Twitch
-  - DOMAIN-SUFFIX,twitch.tv
-  - DOMAIN-SUFFIX,ttvnw.net
-  - DOMAIN-SUFFIX,jtvnw.net
   - DOMAIN-KEYWORD,ttvnw
+  - DOMAIN-SUFFIX,jtvnw.net
+  - DOMAIN-SUFFIX,ttvnw.net
+  - DOMAIN-SUFFIX,twitch.tv
+  - DOMAIN-SUFFIX,twitchcdn.net
