--- a/Rules-Complete/Provider/Domestic.yaml
+++ b/Rules-Complete/Provider/Domestic.yaml
@@ -208,6 +208,7 @@ payload:
   - DOMAIN-SUFFIX,geilicdn.com
   - DOMAIN-SUFFIX,ghpym.com
   - DOMAIN-SUFFIX,gifshow.com
+  - DOMAIN-SUFFIX,gitee.com
   - DOMAIN-SUFFIX,go2map.com
   - DOMAIN-SUFFIX,godic.net
   - DOMAIN-SUFFIX,goodread.com
