proxy加入俩规则

--- a/Rules-Complete/Provider/Proxy.yaml
+++ b/Rules-Complete/Provider/Proxy.yaml
@@ -392,6 +392,8 @@ payload:
   - DOMAIN-SUFFIX,asiatoday.us
   - DOMAIN-SUFFIX,askstudent.com
   - DOMAIN-SUFFIX,askynz.net
+  - DOMAIN-SUFFIX,aklmtt.net
+  - DOMAIN-SUFFIX,snowcool.xyz
   - DOMAIN-SUFFIX,assdrty.com
   - DOMAIN-SUFFIX,assembla.com
   - DOMAIN-SUFFIX,assets.bwbx.io
