--- a/Rules-Streamline/Provider/Proxy.yaml
+++ b/Rules-Streamline/Provider/Proxy.yaml
@@ -20,6 +20,8 @@ payload:
   - DOMAIN-KEYWORD,tesla
   - DOMAIN-KEYWORD,twitter
   - DOMAIN-KEYWORD,whatsapp
+  - DOMAIN-SUFFIX,aklmtt.net
+  - DOMAIN-SUFFIX,snowcool.xyz
   - DOMAIN-SUFFIX,000webhost.com
   - DOMAIN-SUFFIX,030buy.com
   - DOMAIN-SUFFIX,0rz.tw
