更新通用配置和Tun配置

--- a/Config.yaml
+++ b/Config.yaml
@@ -67,9 +67,9 @@ ipv6: false
 
 # 开启系统代理时将忽略这些域(或ip地址)
 cfw-bypass:
-  - localhost
-  - 127.*
+  - "<local>"
   - 10.*
+  - 127.*
   - 172.16.*
   - 172.17.*
   - 172.18.*
@@ -87,7 +87,7 @@ cfw-bypass:
   - 172.30.*
   - 172.31.*
   - 192.168.*
-  - "<local>"
+  - localhost
 
 # 延迟测试设置
 # 超时时间 单位秒
@@ -167,18 +167,42 @@ dns:
     - 'https://doh-jp.blahdns.com/dns-query'
   # fake-ip仅有
   fake-ip-filter:
+    - '*.126.net'
+    - '*.kuwo.cn'
     - '*.lan'
-    - time.windows.com
-    - time.nist.gov
-    - time.apple.com
-    - time.asia.apple.com
+    - '*.linksys.com'
+    - '*.linksyssmartwifi.com'
+    - '*.msftconnecttest.com'
+    - '*.msftncsi.com'
+    - '*.music.163.com'
+    - '*.music.migu.cn'
     - '*.ntp.org.cn'
     - '*.openwrt.pool.ntp.org'
-    - time1.cloud.tencent.com
-    - time.ustc.edu.cn
-    - pool.ntp.org
-    - ntp.ubuntu.com
+    - '*.time.edu.cn'
+    - '*.xiami.com'
+    - '*.y.qq.com'
+    - '+.battlenet.com.cn'
+    - '+.srv.nintendo.net'
+    - '+.stun.playstation.net'
+    - '+.xboxlive.com'
+    - 'stun.*.*.*'
+    - 'stun.*.*'
+    - amobile.music.tc.qq.com
+    - api-jooxtt.sanook.com
+    - api.joox.com
+    - aqqmusic.tc.qq.com
+    - dl.stream.qqmusic.qq.com
+    - heartbeat.belkin.com
+    - isure.stream.qqmusic.qq.com
+    - joox.com
+    - localhost.ptlogin2.qq.com
+    - mobileoc.music.tc.qq.com
+    - music.163.com
+    - music.migu.cn
+    - music.taihe.com
+    - musicapi.taihe.com
     - ntp.aliyun.com
+    - ntp.ubuntu.com
     - ntp1.aliyun.com
     - ntp2.aliyun.com
     - ntp3.aliyun.com
@@ -186,61 +210,37 @@ dns:
     - ntp5.aliyun.com
     - ntp6.aliyun.com
     - ntp7.aliyun.com
-    - time1.aliyun.com
-    - time2.aliyun.com
-    - time3.aliyun.com
-    - time4.aliyun.com
-    - time5.aliyun.com
-    - time6.aliyun.com
-    - time7.aliyun.com
-    - '*.time.edu.cn'
-    - time1.apple.com
-    - time2.apple.com
-    - time3.apple.com
-    - time4.apple.com
-    - time5.apple.com
-    - time6.apple.com
-    - time7.apple.com
-    - time1.google.com
-    - time2.google.com
-    - time3.google.com
-    - time4.google.com
-    - music.163.com
-    - '*.music.163.com'
-    - '*.126.net'
-    - musicapi.taihe.com
-    - music.taihe.com
-    - songsearch.kugou.com
-    - trackercdn.kugou.com
-    - '*.kuwo.cn'
-    - api-jooxtt.sanook.com
-    - api.joox.com
-    - joox.com
-    - y.qq.com
-    - '*.y.qq.com'
-    - streamoc.music.tc.qq.com
-    - mobileoc.music.tc.qq.com
-    - isure.stream.qqmusic.qq.com
-    - dl.stream.qqmusic.qq.com
-    - aqqmusic.tc.qq.com
-    - amobile.music.tc.qq.com
-    - '*.xiami.com'
-    - '*.music.migu.cn'
-    - music.migu.cn
-    - '*.msftconnecttest.com'
-    - '*.msftncsi.com'
-    - localhost.ptlogin2.qq.com
-    - '+.srv.nintendo.net'
-    - '+.stun.playstation.net'
-    - xbox.*.microsoft.com
-    - '+.xboxlive.com'
+    - pool.ntp.org
     - proxy.golang.org
-    - stun.*.*
-    - stun.*.*.*
-    - heartbeat.belkin.com
-    - '*.linksys.com'
-    - '*.linksyssmartwifi.com'
-    - '+.battlenet.com.cn'
+    - songsearch.kugou.com
+    - streamoc.music.tc.qq.com
+    - time.apple.com
+    - time.asia.apple.com
+    - time.nist.gov
+    - time.ustc.edu.cn
+    - time.windows.com
+    - time1.aliyun.com
+    - time1.apple.com
+    - time1.cloud.tencent.com
+    - time1.google.com
+    - time2.aliyun.com
+    - time2.apple.com
+    - time2.google.com
+    - time3.aliyun.com
+    - time3.apple.com
+    - time3.google.com
+    - time4.aliyun.com
+    - time4.apple.com
+    - time4.google.com
+    - time5.aliyun.com
+    - time5.apple.com
+    - time6.aliyun.com
+    - time6.apple.com
+    - time7.aliyun.com
+    - time7.apple.com
+    - trackercdn.kugou.com
+    - xbox.*.microsoft.com
+    - y.qq.com
   # fake-ip仅有
   fallback-filter:
     geoip: false
@@ -253,8 +253,8 @@ dns:
       - 172.16.0.0/12
       - 192.0.0.0/24
       - 192.0.2.0/24
-      - 192.88.99.0/24
       - 192.168.0.0/16
+      - 192.88.99.0/24
       - 198.18.0.0/15
       - 198.51.100.0/24
       - 203.0.113.0/24
@@ -262,10 +262,10 @@ dns:
       - 240.0.0.0/4
       - 255.255.255.255/32
     domain:
-      - '+.google.com'
       - '+.facebook.com'
-      - '+.youtube.com'
       - '+.githubusercontent.com'
+      - '+.google.com'
+      - '+.youtube.com'
   
 # clash-for-android: 
   # 追加系统 DNS 到 nameserver 
