--- a/Mixin.yaml
+++ b/Mixin.yaml
@@ -1,11 +1,9 @@
-mixin:
+mixin: # object
   mixed-port: 7890
   allow-lan: true
   bind-address: "*"
   mode: rule
   log-level: info
-  external-controller: 0.0.0.0:9090
-  secret: '123456'
   cfw-conn-break-strategy:
     proxy: all
     profile: true
@@ -13,7 +11,6 @@ mixin:
   cfw-proxies-order: default
   experimental:
     ignore-resolve-fail: true
-  ipv6: false
   cfw-bypass:
     - localhost
     - 127.*
@@ -39,10 +36,86 @@ mixin:
   dns:
     enable: true
     ipv6: false
-    listen: 0.0.0.0:53
-    use-hosts: true 
-    enhanced-mode: fake-ip
+    enhanced-mode: redir-host #fake-ip
     fake-ip-range: 198.18.0.1/16
+    fake-ip-filter:
+      - '*.126.net'
+      - '*.kuwo.cn'
+      - '*.lan'
+      - '*.linksys.com'
+      - '*.linksyssmartwifi.com'
+      - '*.msftconnecttest.com'
+      - '*.msftncsi.com'
+      - '*.music.163.com'
+      - '*.music.migu.cn'
+      - '*.ntp.org.cn'
+      - '*.openwrt.pool.ntp.org'
+      - '*.time.edu.cn'
+      - '*.xiami.com'
+      - '*.y.qq.com'
+      - '+.battlenet.com.cn'
+      - '+.srv.nintendo.net'
+      - '+.stun.playstation.net'
+      - '+.xboxlive.com'
+      - 'stun.*.*.*'
+      - 'stun.*.*'
+      - 'xbox.*.microsoft.com'
+      - amobile.music.tc.qq.com
+      - api-jooxtt.sanook.com
+      - api.joox.com
+      - aqqmusic.tc.qq.com
+      - dl.stream.qqmusic.qq.com
+      - dns.msftncsi.com
+      - heartbeat.belkin.com
+      - isure.stream.qqmusic.qq.com
+      - joox.com
+      - localhost.ptlogin2.qq.com
+      - mobileoc.music.tc.qq.com
+      - music.163.com
+      - music.migu.cn
+      - music.taihe.com
+      - musicapi.taihe.com
+      - ntp.aliyun.com
+      - ntp.ubuntu.com
+      - ntp1.aliyun.com
+      - ntp2.aliyun.com
+      - ntp3.aliyun.com
+      - ntp4.aliyun.com
+      - ntp5.aliyun.com
+      - ntp6.aliyun.com
+      - ntp7.aliyun.com
+      - pool.ntp.org
+      - proxy.golang.org
+      - songsearch.kugou.com
+      - streamoc.music.tc.qq.com
+      - time.apple.com
+      - time.asia.apple.com
+      - time.nist.gov
+      - time.ustc.edu.cn
+      - time.windows.com
+      - time1.aliyun.com
+      - time1.apple.com
+      - time1.cloud.tencent.com
+      - time1.google.com
+      - time2.aliyun.com
+      - time2.apple.com
+      - time2.google.com
+      - time3.aliyun.com
+      - time3.apple.com
+      - time3.google.com
+      - time4.aliyun.com
+      - time4.apple.com
+      - time4.google.com
+      - time5.aliyun.com
+      - time5.apple.com
+      - time6.aliyun.com
+      - time6.apple.com
+      - time7.aliyun.com
+      - time7.apple.com
+      - trackercdn.kugou.com
+      - www.msftconnecttest.com
+      - www.msftncsi.com
+      - y.qq.com
     default-nameserver:
       - 114.114.114.114
       - 180.76.76.76
@@ -72,132 +145,10 @@ mixin:
       - 'https://1.0.0.1/dns-query'
       - 'https://dns.adguard.com/dns-query'
       - 'https://doh.dns.sb/dns-query'
-    fake-ip-filter:
-      - '*.lan'
-      - time.windows.com
-      - time.nist.gov
-      - time.apple.com
-      - time.asia.apple.com
-      - '*.ntp.org.cn'
-      - '*.openwrt.pool.ntp.org'
-      - time1.cloud.tencent.com
-      - time.ustc.edu.cn
-      - pool.ntp.org
-      - ntp.ubuntu.com
-      - ntp.aliyun.com
-      - ntp1.aliyun.com
-      - ntp2.aliyun.com
-      - ntp3.aliyun.com
-      - ntp4.aliyun.com
-      - ntp5.aliyun.com
-      - ntp6.aliyun.com
-      - ntp7.aliyun.com
-      - time1.aliyun.com
-      - time2.aliyun.com
-      - time3.aliyun.com
-      - time4.aliyun.com
-      - time5.aliyun.com
-      - time6.aliyun.com
-      - time7.aliyun.com
-      - '*.time.edu.cn'
-      - time1.apple.com
-      - time2.apple.com
-      - time3.apple.com
-      - time4.apple.com
-      - time5.apple.com
-      - time6.apple.com
-      - time7.apple.com
-      - time1.google.com
-      - time2.google.com
-      - time3.google.com
-      - time4.google.com
-      - music.163.com
-      - '*.music.163.com'
-      - '*.126.net'
-      - musicapi.taihe.com
-      - music.taihe.com
-      - songsearch.kugou.com
-      - trackercdn.kugou.com
-      - '*.kuwo.cn'
-      - api-jooxtt.sanook.com
-      - api.joox.com
-      - joox.com
-      - y.qq.com
-      - '*.y.qq.com'
-      - streamoc.music.tc.qq.com
-      - mobileoc.music.tc.qq.com
-      - isure.stream.qqmusic.qq.com
-      - dl.stream.qqmusic.qq.com
-      - aqqmusic.tc.qq.com
-      - amobile.music.tc.qq.com
-      - '*.xiami.com'
-      - '*.music.migu.cn'
-      - music.migu.cn
-      - '*.msftconnecttest.com'
-      - '*.msftncsi.com'
-      - localhost.ptlogin2.qq.com
-      - '+.srv.nintendo.net'
-      - '+.stun.playstation.net'
-      - xbox.*.microsoft.com
-      - '+.xboxlive.com'
-      - proxy.golang.org
-      - stun.*.*
-      - stun.*.*.*
-      - heartbeat.belkin.com
-      - '*.linksys.com'
-      - '*.linksyssmartwifi.com'
-      - '+.battlenet.com.cn'
-    # fake-ip仅有
-    fallback-filter:
-      geoip: false
-      ipcidr:
-        - 0.0.0.0/8
-        - 10.0.0.0/8
-        - 100.64.0.0/10
-        - 127.0.0.0/8
-        - 169.254.0.0/16
-        - 172.16.0.0/12
-        - 192.0.0.0/24
-        - 192.0.2.0/24
-        - 192.88.99.0/24
-        - 192.168.0.0/16
-        - 198.18.0.0/15
-        - 198.51.100.0/24
-        - 203.0.113.0/24
-        - 224.0.0.0/4
-        - 240.0.0.0/4
-        - 255.255.255.255/32
-      domain:
-        - '+.google.com'
-        - '+.facebook.com'
-        - '+.youtube.com'
-        - '+.githubusercontent.com'
   tun:
     enable: true
     stack: gvisor
+    dns-hijack:
+      - 198.18.0.2:53
     macOS-auto-route: true
     macOS-auto-detect-interface: true
-    dns-gijack:
-      - tcp://180.76.76.76:53
-      - 180.76.76.76:53
-      - 114.114.114.114:53
-      - 223.5.5.5:53
-      - 223.6.6.6:53
-      - 119.29.29.29:53
-      - 119.28.28.28:53
-      - 1.2.4.8:53
-      - 210.2.4.8:53
-      - tcp://8.8.8.8:53
-      - 8.8.8.8:1053
-      - tcp://8.8.4.4:53
-      - 8.8.4.4:53
-      - tcp://9.9.9.9:53
-      - 9.9.9.9:53
-      - tcp://149.112.112.112:53
-      - 149.112.112.112:53
-      - tcp://4.2.2.1:53
-      - 4.2.2.1:53
-      - tcp://1.1.1.1:53
-      - 1.1.1.1:53
-      - tcp://1.0.0.1:53
-      - 1.0.0.1:53
