--- a/Rules-Complete/Provider/Proxy.yaml
+++ b/Rules-Complete/Provider/Proxy.yaml
@@ -393,6 +393,7 @@ payload:
   - DOMAIN-SUFFIX,askstudent.com
   - DOMAIN-SUFFIX,askynz.net
   - DOMAIN-SUFFIX,aklmtt.net
+  - DOMAIN-SUFFIX,mixin.one
   - DOMAIN-SUFFIX,snowcool.xyz
   - DOMAIN-SUFFIX,assdrty.com
   - DOMAIN-SUFFIX,assembla.com
