--- a/Rules-Streamline/Provider/Proxy.yaml
+++ b/Rules-Streamline/Provider/Proxy.yaml
@@ -22,6 +22,7 @@ payload:
   - DOMAIN-KEYWORD,whatsapp
   - DOMAIN-SUFFIX,aklmtt.net
   - DOMAIN-SUFFIX,snowcool.xyz
+  - DOMAIN-SUFFIX,mixin.one
   - DOMAIN-SUFFIX,000webhost.com
   - DOMAIN-SUFFIX,030buy.com
   - DOMAIN-SUFFIX,0rz.tw
