--- a/Rules-Complete/Provider/Proxy.yaml
+++ b/Rules-Complete/Provider/Proxy.yaml
@@ -15,6 +15,7 @@ payload:
   - DOMAIN-KEYWORD,tesla
   - DOMAIN-KEYWORD,twitter
   - DOMAIN-KEYWORD,whatsapp
+  - DOMAIN-SUFFIX,imoutomoe.net
   - DOMAIN-SUFFIX,picacgs.com
   - DOMAIN-SUFFIX,picaacg.com
   - DOMAIN-SUFFIX,000webhost.com
